--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@
                     <img src="	https://preview.colorlib.com/theme/cakeshop/assets/img/gallery/about1.jpg" alt="">
 
                 </div>
+
             </div>
         </div>
     </div>
@@ -103,6 +104,9 @@
                             <div class="latest-code">
                                 <img src="	https://preview.colorlib.com/theme/cakeshop/assets/img/gallery/items2.jpg"
                                     alt="">
+                                <div class="trans">
+                                    <p>Add to cart</p>
+                                </div>
                             </div>
                             <div class="latest-down">
                                 <h3>Delightful Lemon</h3>
@@ -115,8 +119,7 @@
                     <div class="latest-area">
                         <div class="latest-left">
                             <div class="latest-code">
-                                <img src="	https://preview.colorlib.com/theme/cakeshop/assets/img/gallery/items2.jpg"
-                                    alt="">
+                                <img src="https://preview.colorlib.com/theme/cakeshop/assets/img/gallery/items1.jpg">
                             </div>
                             <div class="latest-down">
                                 <h3>Delightful Lemon</h3>
@@ -129,7 +132,7 @@
                     <div class="latest-area">
                         <div class="latest-left">
                             <div class="latest-code">
-                                <img src="	https://preview.colorlib.com/theme/cakeshop/assets/img/gallery/items2.jpg"
+                                <img src="	https://preview.colorlib.com/theme/cakeshop/assets/img/gallery/items3.jpg"
                                     alt="">
                             </div>
                             <div class="latest-down">
@@ -159,7 +162,7 @@
                     <div class="latest-area">
                         <div class="latest-left">
                             <div class="latest-code">
-                                <img src="	https://preview.colorlib.com/theme/cakeshop/assets/img/gallery/items2.jpg"
+                                <img src="		https://preview.colorlib.com/theme/cakeshop/assets/img/gallery/items3.jpg"
                                     alt="">
                             </div>
                             <div class="latest-down">
@@ -175,7 +178,7 @@
                     <div class="latest-area">
                         <div class="latest-left">
                             <div class="latest-code">
-                                <img src="	https://preview.colorlib.com/theme/cakeshop/assets/img/gallery/items2.jpg"
+                                <img src="https://preview.colorlib.com/theme/cakeshop/assets/img/gallery/items1.jpg"
                                     alt="">
                             </div>
                             <div class="latest-down">
@@ -379,16 +382,16 @@
                             Instagram
                         </a>
                         <a href="#" class="anchor-text">
-                            <i class="fa-brands fa-instagram">
+                            <i class="fa-brands fa-facebook"></i>
 
                             </i>
-                            Instagram
+                            Facebook
                         </a>
                         <a href="#" class="anchor-text">
-                            <i class="fa-brands fa-instagram">
+                            <i class="fa-brands fa-twitter"></i>
 
                             </i>
-                            Instagram
+                            Twitter
                         </a>
                     </div>
 
@@ -402,8 +405,12 @@
                 <div class="footer-photo">
                     <img src="https://preview.colorlib.com/theme/cakeshop/assets/img/icon/phone.svg" alt="">
                     <h4>Contact</h4>
-                    <p>contact@cakeshop.com</p>
-
+                    <ul>
+                        <li>
+                            <a href="#">913-473-7000</a>
+                        </li>
+                        <p>contact@cakeshop.com</p>
+                    </ul>
                 </div>
             </div>
         </div>
