--- a/index.html
+++ b/index.html
@@ -120,6 +120,9 @@
                         <div class="latest-left">
                             <div class="latest-code">
                                 <img src="https://preview.colorlib.com/theme/cakeshop/assets/img/gallery/items1.jpg">
+                                <div class="trans">
+                                    <p>Add to cart</p>
+                                </div>
                             </div>
                             <div class="latest-down">
                                 <h3>Delightful Lemon</h3>
@@ -134,6 +137,9 @@
                             <div class="latest-code">
                                 <img src="	https://preview.colorlib.com/theme/cakeshop/assets/img/gallery/items3.jpg"
                                     alt="">
+                                <div class="trans">
+                                    <p>Add to cart</p>
+                                </div>
                             </div>
                             <div class="latest-down">
                                 <h3>Delightful Lemon</h3>
@@ -148,6 +154,9 @@
                             <div class="latest-code">
                                 <img src="	https://preview.colorlib.com/theme/cakeshop/assets/img/gallery/items2.jpg"
                                     alt="">
+                                <div class="trans">
+                                    <p>Add to cart</p>
+                                </div>
                             </div>
                             <div class="latest-down">
                                 <h3>Delightful Lemon</h3>
@@ -164,6 +173,9 @@
                             <div class="latest-code">
                                 <img src="		https://preview.colorlib.com/theme/cakeshop/assets/img/gallery/items3.jpg"
                                     alt="">
+                                <div class="trans">
+                                    <p>Add to cart</p>
+                                </div>
                             </div>
                             <div class="latest-down">
                                 <h3>Delightful Lemon</h3>
@@ -180,6 +192,9 @@
                             <div class="latest-code">
                                 <img src="https://preview.colorlib.com/theme/cakeshop/assets/img/gallery/items1.jpg"
                                     alt="">
+                                <div class="trans">
+                                    <p>Add to cart</p>
+                                </div>
                             </div>
                             <div class="latest-down">
                                 <h3>Delightful Lemon</h3>
