--- a/about.html
+++ b/about.html
@@ -5,10 +5,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HOME</title>
+    <title>about</title>
 </head>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
-<link rel="stylesheet" href="index.css">
+<link rel="stylesheet" href="cakes.css">
 <link rel="stylesheet" href="css/owl.carousel.min.css">
 <link rel="stylesheet" href="css/owl.theme.default.min.css">
 <script src="jss/jquery.min.js"></script>
@@ -52,10 +52,7 @@
     <div class="section">
         <div class="container">
             <div class="section-area">
-                <h1>Healthy Made Delicious Cake</h1>
-                <div class="section-child">
-                    <button>Order Now</button>
-                </div>
+                <h1> Delicious Cake</h1>
             </div>
         </div>
     </div>
@@ -92,119 +89,6 @@
 
                 </div>
 
-            </div>
-        </div>
-    </div>
-    <div class="latest-item">
-        <div class="container">
-            <div class="owl-carousel owl-theme">
-                <div class="item">
-                    <div class="latest-area">
-                        <div class="latest-left">
-                            <div class="latest-code">
-                                <img src="	https://preview.colorlib.com/theme/cakeshop/assets/img/gallery/items2.jpg"
-                                    alt="">
-                                <div class="trans">
-                                    <p>Add to cart</p>
-                                </div>
-                            </div>
-                            <div class="latest-down">
-                                <h3>Delightful Lemon</h3>
-                                <p>$98.00</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="item">
-                    <div class="latest-area">
-                        <div class="latest-left">
-                            <div class="latest-code">
-                                <img src="https://preview.colorlib.com/theme/cakeshop/assets/img/gallery/items1.jpg">
-                                <div class="trans">
-                                    <p>Add to cart</p>
-                                </div>
-                            </div>
-                            <div class="latest-down">
-                                <h3>Delightful Lemon</h3>
-                                <p>$98.00</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="item">
-                    <div class="latest-area">
-                        <div class="latest-left">
-                            <div class="latest-code">
-                                <img src="	https://preview.colorlib.com/theme/cakeshop/assets/img/gallery/items3.jpg"
-                                    alt="">
-                                <div class="trans">
-                                    <p>Add to cart</p>
-                                </div>
-                            </div>
-                            <div class="latest-down">
-                                <h3>Delightful Lemon</h3>
-                                <p>$98.00</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="item">
-                    <div class="latest-area">
-                        <div class="latest-left">
-                            <div class="latest-code">
-                                <img src="	https://preview.colorlib.com/theme/cakeshop/assets/img/gallery/items2.jpg"
-                                    alt="">
-                                <div class="trans">
-                                    <p>Add to cart</p>
-                                </div>
-                            </div>
-                            <div class="latest-down">
-                                <h3>Delightful Lemon</h3>
-                                <p>$98.00</p>
-                            </div>
-                        </div>
-
-
-                    </div>
-                </div>
-                <div class="item">
-                    <div class="latest-area">
-                        <div class="latest-left">
-                            <div class="latest-code">
-                                <img src="		https://preview.colorlib.com/theme/cakeshop/assets/img/gallery/items3.jpg"
-                                    alt="">
-                                <div class="trans">
-                                    <p>Add to cart</p>
-                                </div>
-                            </div>
-                            <div class="latest-down">
-                                <h3>Delightful Lemon</h3>
-                                <p>$98.00</p>
-                            </div>
-                        </div>
-
-
-                    </div>
-                </div>
-                <div class="item">
-                    <div class="latest-area">
-                        <div class="latest-left">
-                            <div class="latest-code">
-                                <img src="https://preview.colorlib.com/theme/cakeshop/assets/img/gallery/items1.jpg"
-                                    alt="">
-                                <div class="trans">
-                                    <p>Add to cart</p>
-                                </div>
-                            </div>
-                            <div class="latest-down">
-                                <h3>Delightful Lemon</h3>
-                                <p>$98.00</p>
-                            </div>
-                        </div>
-
-
-                    </div>
-                </div>
             </div>
         </div>
     </div>
@@ -293,53 +177,7 @@
             </div>
         </div>
     </div>
-    <div class="artical">
-        <div class="container">
-            <div class="artical-area">
-                <div class="artical-menu">
-                    <h2>Our Blogs</h2>
-                </div>
 
-                <div class="artical-main">
-                    <button>More Blog</button>
-                </div>
-            </div>
-        </div>
-        <div class="browser">
-            <div class="browser-area">
-                <img src="https://preview.colorlib.com/theme/cakeshop/assets/img/gallery/blog1.jpg" alt="">
-            </div>
-            <div class="browser-main">
-                <div class="browser-head">
-                    <h2>Tomato, black olive, feta & anchovy tart ulla mco laboris</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor dunt ut labore et
-                        dolore magna aliqua. Ut
-                        enim ad minim veniam, quis nostrud exercita tion ullamco laboris nisi ut aliquip.</p>
-                    <div class="browse-bt">
-                        <a href="#" class="browser-btn">
-                            LEARN MORE
-                        </a>
-                    </div>
-                </div>
-            </div>
-            <div class="browser-area">
-                <img src="https://preview.colorlib.com/theme/cakeshop/assets/img/gallery/blog2.jpg" alt="">
-            </div>
-            <div class="browser-main">
-                <div class="browser-head">
-                    <h2>Tomato, black olive, feta & anchovy tart ulla mco laboris</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor dunt ut labore et
-                        dolore magna aliqua. Ut
-                        enim ad minim veniam, quis nostrud exercita tion ullamco laboris nisi ut aliquip.</p>
-                    <div class="browse-bt">
-                        <a href="#" class="browser-btn">
-                            LEARN MORE
-                        </a>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
     <div class="aside">
         <div class="container">
             <div class="aside-head">
@@ -445,7 +283,7 @@
         reiciendis molestias dolore aut veniam dolorum, perspiciatis sunt nostrum quasi labore error atque libero
         assumenda. Sed!
     </div> -->
-    <script>
+    <!-- <script>
         $('.owl-carousel').owlCarousel({
             loop: true,
             margin: 10,
@@ -463,7 +301,7 @@
                 }
             }
         })
-    </script>
+    </script> -->
 </body>
 
 </html>
