--- a/index.html
+++ b/index.html
@@ -450,7 +450,7 @@
             loop: true,
             margin: 10,
             nav: true,
-            // autoplay: true,
+            autoplay: true,
             responsive: {
                 0: {
                     items: 1
