--- a/about.html
+++ b/about.html
@@ -35,7 +35,7 @@
             <ul class="nevbar">
                 <li><a href="index.html">HOME</a></li>
                 <li><a href="cakes.html">CAKES</a></li>
-                <li><a href="about.html">ABOUT</a></li>
+                <li class="class"><a href="about.html">ABOUT</a></li>
                 <li><a href="#">BLOG</a>
                     <ul class="menu">
                         <li>Blog</li>
