--- a/cakes.html
+++ b/cakes.html
@@ -34,7 +34,7 @@
         <div class="nevigation">
             <ul class="nevbar">
                 <li><a href="index.html">HOME</a></li>
-                <li><a href="cakes.html">CAKES</a></li>
+                <li class="class"><a href="cakes.html">CAKES</a></li>
                 <li><a href="about.html">ABOUT</a></li>
                 <li><a href="#">BLOG</a>
                     <ul class="menu">
