--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         </div>
         <div class="nevigation">
             <ul class="nevbar">
-                <li><a href="index.html">HOME</a></li>
+                <li class="class"><a href="index.html">HOME</a></li>
                 <li><a href="cakes.html">CAKES</a></li>
                 <li><a href="about.html">ABOUT</a></li>
                 <li><a href="#">BLOG</a>
