--- a/index.html
+++ b/index.html
@@ -208,10 +208,12 @@
             </div>
         </div>
     </div>
-    <div class="container">
-        <div class="customer">
-            <div class="customer-item">
-                <i class="fa-solid fa-play"></i>
+    <div class="customer-parent">
+        <div class="container">
+            <div class="customer">
+                <div class="customer-item">
+                    <i class="fa-solid fa-play"></i>
+                </div>
             </div>
         </div>
     </div>
